--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carolina Silva</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link href="CSS/index.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <nav class="navbar"> 
@@ -28,19 +28,19 @@
 </div> --> 
 <div class="main"> 
     <div class="container">
-        <img src="Images /Group 364.png" alt="The Food Pantry" class="image1">
+        <img src="images/Group 364.png" alt="The Food Pantry" class="image1">
         <div class="overlay">
           <p class="text">The Food Pantry</p>
         </div>
     </div>
     <div class="container">
-        <img src="Images /Frame 1.png" alt="Endangered Species" class="image2">
+        <img src="images/Frame 1.png" alt="Endangered Species" class="image2">
         <div class="overlay">
           <p class="text">Endangered Species </p>
         </div>
     </div>
     <div class="container">
-        <img src="Images /Frame 233.png" alt="VIAT" class= "image3">
+        <img src="images/Frame 233.png" alt="VIAT" class= "image3">
         <div class="overlay">
             <p class="text">VIAT</p>
         </div>
